--- a/style.css
+++ b/style.css
@@ -10,69 +10,14 @@
     font-family:'Roboto', sans-serif;
 } 
 
-.nav{
-
+.row{
+    width:100%;
+    max-width: 1200px;
+    margin:0 auto;
 }
 .nav__row{
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 0;
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto; 
-}
-
-
-
-ul{
-    display: flex;
-    align-items: center;
-    list-style: none;
-    text-decoration-line: none;
-    gap:16px;
-}
-
-.logo{
-    height:100%;
-    max-height:90px;
-    padding:10px 0;
-}
-
-.nav__logo--title{
-    font-size: 24px;
-    font-weight: 700;
-    color: #333;
-    padding-left: px;
-    margin-left: -100px;
-    padding-bottom: 2px;
-
-    
-}
-
-.nav__row--container{
-    border: 6px solid purple;
-}
-.nav__row--wrapper{
-    border: 5px solid orange;
-} 
-
-
-.button{
-    display: inline-block;
-    padding: 10px 30px;
-    background-color: rgb(41, 7, 120);
-    color: white;
-    text-decoration: none;
-    border-radius: 12px;
-    font-weight: 500;
-    transition: all .5s ease;
-    
-}
-
-.a.nav__link{
-
-    color: #333;
-    font-weight: 500;
-    transition: color 1s ease;
-    
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    padding:20px 0;
 }
