--- a/style.css
+++ b/style.css
@@ -3,62 +3,62 @@
 
 
 
-*{
-    padding:0;
-    margin:0;
-    box-sizing: border-box;
-    font-family:'Roboto', sans-serif;
-}
 
-.nav__container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border:solid purple 4px;
-    
+
+
+* {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    border:border-box;
+    background-color: #f5f5f5;
+    color: #333;
 }
 .row{
+    padding:24px;
+    width:100%;
+    max-width: 1200px;
+    margin:0 auto;
+}
+
+.nav__row{
     width:100%;
     max-width:1200px;
-    margin: 0 auto;
+    margin:0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 24px;
-    border: solid orange 3px;
 }
-.logo{
+
+.nav__logo{
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+}
+
+.nav__logo--img{
+    height:40px;
+    width: 40px;
+}
+
+.nav__links{
+    padding:0 48px;
     
 }
-.nav__links{
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 32px;
-}
-.nav__logo--img{
-    width:40px;
-    height:40px;
-}
-.nav__links{
+.nav__link{
     text-decoration: none;
-    color: #333;
-    font-weight: 500;
-    font-size: 16px;
-    transition: color 300ms ease;
 }
-.btn{
-    padding: 12px 24px;
-    background-color: blue;
-    color: #fff;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 500;
-    transition: color 300ms ease;
+.nav__link:hover{
+    text-decoration: underline;
 }
+.nav__link--primary{
+    border:solid 2px;
+    border-radius: 6px;
+    padding:4px;
+    background-color:#6415ff;
+}
+.nav__link--primary:hover{
+    text-decoration: none;
+}
+    
+    
