--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 
 
-* {
+body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
@@ -14,20 +14,20 @@
     background-color: #f5f5f5;
     color: #333;
 }
-.row{
-    padding:24px;
-    width:100%;
-    max-width: 1200px;
-    margin:0 auto;
+
+.nav{
+     width:100%;
+     max-width: 1200px;
+     margin: 0 auto;
+    
 }
 
 .nav__row{
-    width:100%;
-    max-width:1200px;
-    margin:0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding:24px;
+    
 }
 
 .nav__logo{
@@ -35,18 +35,31 @@
     justify-content: space-between;
     align-items: center;
 }
-
+.nav__title{
+    padding-bottom:2px;
+    font-weight:900;
+    font-size:24px;
+    margin-left:12px;
+}
 .nav__logo--img{
     height:40px;
     width: 40px;
 }
 
+
 .nav__links{
-    padding:0 48px;
-    
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+         
 }
 .nav__link{
-    text-decoration: none;
+    text-decoration: none; 
+    display:inline-block;
+    margin-left: 40px;
+    
 }
 .nav__link:hover{
     text-decoration: underline;
@@ -56,9 +69,13 @@
     border-radius: 6px;
     padding:4px;
     background-color:#6415ff;
+    color:#f5f5f5
 }
 .nav__link--primary:hover{
     text-decoration: none;
+   
+    transform:translateY(2px);
+    transition: all 300ms ease;
 }
     
     
