--- a/style.css
+++ b/style.css
@@ -6,44 +6,57 @@
 
 
 
-body {
+*{
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     border:border-box;
     background-color: #f5f5f5;
-    color: #333;
+    color: #243E63;
+}
+.purple{
+    color:#6415ff;
+}
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:36px;
+
 }
 
-.nav{
-     width:100%;
-     max-width: 1200px;
-     margin: 0 auto;
-    
-}
+.row{
+    width:100%;
+    max-width:1200px;
+    margin:0 auto;
+ }
 
 .nav__row{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding:24px;
-    
-}
+    padding: 24px;
+    width:100%;
+    max-width:1200px;
+    padding:40px;
+ }
 
 .nav__logo{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .nav__title{
     padding-bottom:2px;
     font-weight:900;
     font-size:24px;
-    margin-left:12px;
-}
+ }
+
 .nav__logo--img{
     height:40px;
     width: 40px;
+    padding: 24px 16px;
 }
 
 
@@ -52,18 +65,19 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-         
 }
+
 .nav__link{
     text-decoration: none; 
     display:inline-block;
     margin-left: 40px;
-    
+     color:#243E63;
 }
+
 .nav__link:hover{
     text-decoration: underline;
 }
+
 .nav__link--primary{
     border:solid 2px;
     border-radius: 6px;
@@ -71,11 +85,109 @@ body {
     background-color:#6415ff;
     color:#f5f5f5
 }
+
 .nav__link--primary:hover{
     text-decoration: none;
-   
     transform:translateY(2px);
     transition: all 300ms ease;
 }
+
+.row{
+    display: flex;
+    justify-content: center;
+}
+@media(max-width:1200px){
+    .header__img{
+        max-width:512px
+    }
+}
+.header__description{
+    display: flex;
+    flex-direction: column;
+    width:100%;
+    max-width:400px;
     
+}
+
+h1{
+    font-size: 30px;
+    text-align:center;
+    padding:16px;
+}
+.header__description--para{
+    text-align:center;
+    padding:16px;
+}
+
+.input__container {
+    width: 100%;
+    max-width: 180px;
+    max-height: 500px;
+    border-radius: 500px;
+    border: 2px solid rgb(229, 231, 235);
+    padding: 20px 192px 2px 20px;
+    color: rgb(36, 62, 99);
+    font-size: 16px;
+    font-weight: 500;
+    z-index: 1;
+    position:relative;
+    overflow:hidden;
     
+}
+
+
+.email__input{
+    border:none;
+    padding-top: 8px;
+    margin-bottom: 24px;
+}
+.email__btn:hover {
+ 
+        background-color: rgba(60, 13, 153);
+}
+
+
+.email__btn{
+    z-index: 2;
+    margin: 8px;
+    height: calc(100% - 16px);
+    border-radius: 500px;
+    width: 130px;
+    border: none;
+    background-color: #6415ff;
+    color: #fff;
+    font-weight: 700;
+    font-size: 16px;
+    position:absolute;
+    margin-top: -12px;
+    margin-left: 90px;
+    transition: all 300ms ease;
+}
+
+
+
+button {
+    cursor: pointer;
+    border: none;
+   
+}
+
+.header__customer--title{
+    text-align: center;
+    font-size: 12px;
+    
+    padding: 16px;
+}
+.customer__logo{
+    padding: 16px;
+}
+
+.header__img{
+    height:400px;
+    width: 100%;
+    max-width:560px;
+    display: flex;
+    align-items: center;
+    padding: 16px;
+}
+
