--- a/style.css
+++ b/style.css
@@ -17,12 +17,24 @@
 .purple{
     color:#6415ff;
 }
+.landing{
+    margin:16px;
+    padding:0 32px;
+}
+.body{
+    max-width:100VW;
+    overflow-x:hidden;
+}
 .container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding:36px;
+    width:100%;
+    max-width:1200px;
+    margin:0 auto;
+    padding:96px 0;
+    overflow:hidden;
 
+}
+.img{
+    width:100%;
 }
 
 .row{
@@ -35,10 +47,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 24px;
     width:100%;
     max-width:1200px;
-    padding:40px;
+   
  }
 
 .nav__logo{
@@ -112,17 +123,16 @@
 h1{
     font-size: 30px;
     text-align:center;
-    padding:16px;
+    margin:16px;
 }
 .header__description--para{
     text-align:center;
-    padding:16px;
+    margin:20px;
 }
 
 .input__container {
     width: 100%;
     max-width: 180px;
-    max-height: 500px;
     border-radius: 500px;
     border: 2px solid rgb(229, 231, 235);
     padding: 20px 192px 2px 20px;
@@ -132,6 +142,8 @@ h1{
     z-index: 1;
     position:relative;
     overflow:hidden;
+    align-items: center;
+    margin:8px;
     
 }
 
@@ -142,8 +154,7 @@ h1{
     margin-bottom: 24px;
 }
 .email__btn:hover {
- 
-        background-color: rgba(60, 13, 153);
+ background-color: rgba(60, 13, 153);
 }
 
 
@@ -175,11 +186,10 @@ button {
 .header__customer--title{
     text-align: center;
     font-size: 12px;
-    
-    padding: 16px;
+    margin: 8px;
 }
 .customer__logo{
-    padding: 16px;
+    margin: 16px;
 }
 
 .header__img{
@@ -190,4 +200,78 @@ button {
     align-items: center;
     padding: 16px;
 }
+
+/*
+features
+*/
+
+
+.features{
+ 
+}
+.row__narrow{
+    display: flex;
+    flex-direction:column;   
+    align-items: center;
+}
+.section__tag{
+    font-size: 16px;
+    color:#6415ff;
+    letter-spacing: 1.6px;
+    font-weight:700;
+    text-transform:uppercase;
+}
+.section__title{
+    font-weight:900;
+    font-size:48px;
+    color: rgb(36, 62, 99);
+    line-height:1.5;
+    margin:16px;
+    letter-spacing: 0.025em;
+}
+.section__para{
+    max-width: 500px;
+    text-align: center;
+}
+
+/*services*/
+
+.feature__row{
+    padding:32px 8px;
+    margin: 0 16px;
+    display: flex;
+    align-items: flex-start;
+   
+    
+}
+
+.feature__img--wrapper{
+    display: flex;
+    padding:20px;
+    border: 1px solid #e5e7eb;
+    border-radius:500px;
+}
+.feature__img{
+    width:24px;
+    height:24px;
+}
+.feature__text{
+    margin-top: 8px;
+    margin-left: 16px;
+}
+.feature__title{
+    line-height:1;
+}
+.feature__para{
+    margin-top: 16px;
+    font-size:16px;
+    color:rgb(124, 139, 161);
+    line-height:2;
+    font-weight:500;
+}
+
+
+
+
+
 
