--- a/Treact.css
+++ b/Treact.css
@@ -13,172 +13,65 @@
     box-sizing: border-box;
     background-color: #f5f5f5;
     color: #243E63;
-    scroll-behavior: smooth;
+}
+.purple{
+    color:#6415ff;
 }
 
-
-
-body{
-    max-width:100vw;
-    overflow-x: hidden;
-}
-nav{    
-    height:32px;
-    display: flex;  
-}
-
-ul{
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-}
-p{
-    font-size: 16px;
-    line-height: 1.625;
-    font-weight: 500;
-}
-a{
-    text-decoration: none;
-    color: inherit;
-}
-
-link:hover{
-    text-decoration: underline;
-}
-
-.nav__row{
-    display: flex;
-    justify-content: space-between;
-}
-.row{
-    width:100%;
-    max-width:1200px;
-    margin:0 auto;
-    color: #243e63;
-}
-
-.nav__row{
-    display: flex;
-    justify-content: space-between;
-    padding:16px 0;
-    align-items: center;
-}
-
-.nav__logo{
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
-
-.nav__logo--img{
-    width:40px;
-    height:40px;
-    margin-left: 16px;
-
-
-}
-
-
-.nav__title{
-    font-size: 32px;
-    font-weight: 900;
-    color: #243e63;
-    display: flex;
-  
-
-}
-            
-.nav__links{
-    display: flex;
-    list-style: none;
-    
-    gap: 32px;
-}
-.nav__link:hover{
-    text-decoration: underline;
-}
-.nav__link--primary{
-    background-color: #6415ff;
-    color:#fff;
-    padding:8px 24px;
-    border-radius: 500px;
-    font-weight: 700;
-    text-decoration: none;
-}
-
-.nav__link--primary:hover{
-    background-color: rgba(60, 13, 153);
-    
-}   
-.nav__link--primary:hover{
-    text-decoration: none;
-}
-.menu__backdrop{
+.btn__menu{
+    display:none;
+    background:transparent;
+    border:none;
+    text-align: center;
+    width:24px;
+    height:24px;
+    cursor:pointer;
+    color:#243E63;
+ }
+ .menu__backdrop{
     position:absolute;
-    background-color: #243e63;
+    background-color: #242424;
     top:0;
     left:0;
-    right:0;
+    right: 0;
     bottom:0;
-    z-index:100;
-    display: flex;
+    z-index: 10;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    transition: all 300ms ease;
-    opacity:0;
-    visibility:hidden;
-}
-.menu--open .menu__backdrop{
-    visibility:visible;
-    opacity:1;
-}
-.menu--open{
-    max-height:100vh;
-    overflow-y:hidden;
-}
-.menu__links{
+    display:none
+
+ }
+
+ .i{
     display: flex;
     flex-direction: column;
     align-items: center;
-    
-}
+    margin:16px;
+ }
 
-    
+ .menu--open .menu__backdrop{
+    display:flex;
 
-.menu__list{
-    padding:24px;
-}
-
-.menu__link{
-    font-size: 24px; 
-}
-.menu__link:hover{
-    text-decoration: underline;
-}
-
-.menu__link--primary{
-    background-color: #6415ff;
-    color:#fff;
-    padding:12px 32px;
-    border-radius: 500px;
-    font-weight: 700;
-}   
-
-.menu__link--primary:hover{
-    background-color: rgba(60, 13, 153);
-  
-}   
-.menu__link--primary:hover{
-    text-decoration: none;}
-.btn__menu--close{
+ }  
+ .menu__links{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+ }
+ .menu__link{
+    text-decoration: none; 
+    display:block;
+    margin:16px;
+    font-size:24px;
+    color:#f5f5f5;
+ }
+ .btn__menu--close{
     position:absolute;
-    right: 20px;
-    top:10px;
-    padding:8px;
-    color:white;
-}
-
-
+    top:32px;
+    right:32px;
+    color:#f5f5f5;
+ }
 
  /*landing page*/
 
@@ -188,21 +81,103 @@ link:hover{
     padding:0 32px;
 }
 
-.container{
+.body{
+    max-width:100VW;
+    overflow-x:hidden;
+}
+.nav{
+    padding-top: 32px;
     display: flex;
-    flex-direction: row;
+}
+.container{
+    width:100%;
+    max-width:1200px;
+    margin:0 auto;
+    padding:96px 0;
+    overflow:hidden;
+    }
+.img{
+    width:100%;
+}
+
+.row{
+    width:100%;
+    max-width:1200px;
+    margin:0 auto;
+ }
+
+.nav__row{
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
-    margin-top: 96px;
+    width:100%;
+    max-width:1200px;
+    margin:0 auto;
+    padding:20px;
+   
+ }
+
+.nav__logo{
+  display: flex;
+  align-items:center;
 }
+
+.nav__title{
+    padding-bottom:2px;
+    font-weight:900;
+    font-size:24px;
+ }
+
+.nav__logo--img{
+    height:40px;
+    width: 40px;
+   
+}
+
+
+.nav__links{
+    margin: 16px;
+  
+}
+
+.nav__link{
+    text-decoration: none; 
+    display:inline-block;
+    margin-left: 40px;
+    color:#243E63;
+}
+
+.nav__link:hover{
+    text-decoration: underline;
+}
+
+.nav__link--primary{
+    border:solid 2px;
+    border-radius: 6px;
+    padding:4px;
+    background-color:#6415ff;
+    color:#f5f5f5
+}
+
+.nav__link--primary:hover{
+    text-decoration: none;
+    transform:translateY(2px);
+    transition: all 300ms ease;
+}
+
+.row{
+    display: flex;
+    justify-content: center;
+}
+
 
 .header__description{
     display: flex;
     flex-direction: column;
     width:100%;
     max-width:360px;
-    padding:8px    
+    padding:8px
+    
 }
 
 h1{
@@ -281,13 +256,12 @@ button {
     max-width:560px;
     display: flex;
     align-items: center;
-    flex-direction: row;
     padding: 8px;
 }
 
 /*
-features*/
-
+features
+*/
 
 .features{
     width:100%;
@@ -334,6 +308,7 @@ features*/
     padding:32px 8px;
     display: flex;
     align-items:flex-start;
+    
     width:calc(100% / 3)
  
 }
@@ -448,15 +423,11 @@ section Quality
     width:100%;
 }
 
-
-/* small phones, Tablets, Large Smart Phones */
-
-@media(max-width:768px){
-
-    .nav__links{
+@media (max-width:550px){
+    nav__links:{
         display:none;
     }
-    .btn__menu{
-        
-    }
 }
+
+
+
