--- a/style.css
+++ b/style.css
@@ -22,9 +22,10 @@ body{
     max-width:100vw;
     overflow-x: hidden;
 }
-nav{    
-    height:32px;
-    display: flex;  
+  
+
+.btn, button{
+    cursor: pointer;
 }
 
 ul{
@@ -37,33 +38,29 @@ p{
     line-height: 1.625;
     font-weight: 500;
 }
+.purple{
+    color:#6415ff;
+}
 a{
     text-decoration: none;
-    color: inherit;
+ 
 }
 
 link:hover{
     text-decoration: underline;
 }
 
-.nav__row{
-    display: flex;
-    justify-content: space-between;
-}
-.row{
-    width:100%;
-    max-width:1200px;
-    margin:0 auto;
-    color: #243e63;
-}
 
 .nav__row{
     display: flex;
     justify-content: space-between;
-    padding:16px 0;
     align-items: center;
+    padding:24px;
+    width:100%;
+    max-width: 1200px;
+    margin:0 auto;
+    color: #243e63;  
 }
-
 .nav__logo{
     display: flex;
     align-items: center;
@@ -84,15 +81,13 @@ link:hover{
     font-weight: 900;
     color: #243e63;
     display: flex;
-  
-
 }
-            
+
 .nav__links{
     display: flex;
-    list-style: none;
-    
-    gap: 32px;
+    list-style: none;   
+    gap: 40px;
+    margin-left: 24px;
 }
 .nav__link:hover{
     text-decoration: underline;
@@ -101,21 +96,34 @@ link:hover{
     background-color: #6415ff;
     color:#fff;
     padding:8px 24px;
-    border-radius: 500px;
+    border-radius: 50px;
     font-weight: 700;
-    text-decoration: none;
+
 }
 
 .nav__link--primary:hover{
     background-color: rgba(60, 13, 153);
-    
-}   
-.nav__link--primary:hover{
     text-decoration: none;
+
+}   
+.button__menu--svg{
+    width:40px;
+    height:40px;
 }
+
+
+.btn__menu{
+    background-color: transparent;
+    font-size: 24px;
+    border:none;
+    color:#243e63;
+    transition: all 300ms ease;
+    display:block;
+}
+
+
 .menu__backdrop{
     position:absolute;
-    background-color: #243e63;
     top:0;
     left:0;
     right:0;
@@ -166,16 +174,15 @@ link:hover{
 
 .menu__link--primary:hover{
     background-color: rgba(60, 13, 153);
-  
+    text-decoration: none;
 }   
-.menu__link--primary:hover{
-    text-decoration: none;}
+
 .btn__menu--close{
     position:absolute;
     right: 20px;
     top:10px;
     padding:8px;
-    color:white;
+   
 }
 
 
@@ -187,6 +194,10 @@ link:hover{
     margin:16px;
     padding:0 32px;
 }
+.row{
+
+}
+
 
 .container{
     display: flex;
@@ -194,7 +205,7 @@ link:hover{
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    margin-top: 96px;
+
 }
 
 .header__description{
@@ -202,7 +213,7 @@ link:hover{
     flex-direction: column;
     width:100%;
     max-width:360px;
-    padding:8px    
+    padding:8px;   
 }
 
 h1{
@@ -213,6 +224,9 @@ h1{
 .header__description--para{
     text-align:center;
     margin:16px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
 }
 
 .input__container {
@@ -278,11 +292,14 @@ button {
 .header__img{
     height:400px;
     width: 100%;
-    max-width:560px;
+    max-width: 840px;
     display: flex;
-    align-items: center;
     flex-direction: row;
     padding: 8px;
+    
+}
+.header__img--wrapper{
+    
 }
 
 /*
@@ -324,7 +341,7 @@ features*/
     letter-spacing: 0.025em;
 }
 .section__para{
-    max-width: 500px;
+    max-width: 550px;
     text-align: center;
 }
 
@@ -453,6 +470,31 @@ section Quality
 
 @media(max-width:768px){
 
+    .header__description{
+        padding: 0 8px;
+    }
+    h1{
+        font-size:24px;
+    }
+    button{
+        font-size: 16px;
+    }
+
+
+}
+/*small phones, large smart phones */
+
+@media(max-width:550px){
+
+    .header__img{
+        max-width:100%;
+        height:auto;
+        margin-top: 32px;
+    }
+    .btn__menu{
+        display:block;
+    }
     .nav__links{
         display:none;
     }
+} 
