--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 
-
-
-
-
 *{
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -111,6 +107,11 @@ link:hover{
     height:40px;
 }
 
+.button__menu--icon{
+    width:28px;
+    height:28px;
+}
+
 
 .btn__menu{
     background-color: transparent;
@@ -118,12 +119,18 @@ link:hover{
     border:none;
     color:#243e63;
     transition: all 300ms ease;
-    display:block;
+    display:none;
+}
+.btn__menu:hover{
+    color:#6415ff;
+}
+.btn__menu:hover .button__menu--icon{
+    color:#6415ff;
 }
 
 
 .menu__backdrop{
-    position:absolute;
+    position:fixed;
     top:0;
     left:0;
     right:0;
@@ -135,10 +142,13 @@ link:hover{
     transition: all 300ms ease;
     opacity:0;
     visibility:hidden;
+    pointer-events: none;
+    background-color: rgba(255,255,255,0.97);
 }
 .menu--open .menu__backdrop{
     visibility:visible;
     opacity:1;
+    pointer-events: auto;
 }
 .menu--open{
     max-height:100vh;
@@ -195,24 +205,26 @@ link:hover{
     padding:0 32px;
 }
 .row{
-
+    width:100%;
+    max-width:1200px;
+    margin:0 auto;
 }
+
 
 
 .container{
+    padding: 96px 0;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
-
 }
 
+
 .header__description{
+    text-align:center;
     display: flex;
     flex-direction: column;
     width:100%;
-    max-width:360px;
+    max-width: 360px;
     padding:8px;   
 }
 
@@ -220,6 +232,7 @@ h1{
     font-size: 30px;
     text-align:center;
     margin: 8px;
+    margin-right: 20px;
 }
 .header__description--para{
     text-align:center;
@@ -260,17 +273,17 @@ h1{
 
 .email__btn{
     z-index: 2;
-    margin: -56px;
+    margin: -55px;
     height: calc(100% - 16px);
     border-radius: 500px;
-    width: 104px;
+    width: 105px;
     border: none;
     background-color: #6415ff;
     color: #fff;
     font-weight: 700;
     font-size: 16px;
     position:absolute;
-    margin-left: 210px;
+    margin-left: 132px;
     transition: all 300ms ease;
 }
 
@@ -285,22 +298,14 @@ button {
     font-size: 12px;
     margin:16px
 }
-.customer__logo{
-    margin: 16px;
-}
 
 .header__img{
-    height:400px;
-    width: 100%;
-    max-width: 840px;
-    display: flex;
-    flex-direction: row;
-    padding: 8px;
-    
+  width:100%;
+  max-width:560px;
+  height:auto;
+  margin:0 auto
 }
-.header__img--wrapper{
-    
-}
+
 
 /*
 features*/
@@ -344,6 +349,7 @@ features*/
     max-width: 550px;
     text-align: center;
 }
+
 
 /*services*/
 
@@ -467,7 +473,6 @@ section Quality
 
 
 /* small phones, Tablets, Large Smart Phones */
-
 @media(max-width:768px){
 
     .header__description{
@@ -478,6 +483,13 @@ section Quality
     }
     button{
         font-size: 16px;
+    }
+
+    .btn__menu{
+        display:block;
+    }
+    .nav__links{
+        display:none;
     }
 
 
@@ -491,10 +503,9 @@ section Quality
         height:auto;
         margin-top: 32px;
     }
-    .btn__menu{
-        display:block;
+    .header__description,.header__img--wrapper{
+     width:100%;
+     max-width:512px;
+     margin:0 auto;
     }
-    .nav__links{
-        display:none;
-    }
-} 
+}
