--- a/style.css
+++ b/style.css
@@ -197,42 +197,51 @@ link:hover{
 
 
 
- /*landing page*/
-
-
-.landing{
-    margin:16px;
-    padding:0 32px;
-}
-.row{
-    width:100%;
-    max-width:1200px;
-    margin:0 auto;
-}
+ /*header*/
 
 
 
 .container{
     padding: 96px 0;
-    display: flex;
+
+}
+
+.row{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    color: #243e63;
+    flex-direction: column;
     align-items: center;
 }
+.row{
+    display: flex;
+    justify-content: space-between;
+  
+}
+
+
 
 
 .header__description{
     text-align:center;
     display: flex;
     flex-direction: column;
+    align-items: center;
     width:100%;
-    max-width: 360px;
+    max-width: 760px;
     padding:8px;   
+
+}
+.header__description{
+    width: 100%;
+    max-width: 560px;
+    margin:0 auto;
 }
 
 h1{
-    font-size: 30px;
-    text-align:center;
-    margin: 8px;
-    margin-right: 20px;
+        color: #1a202c;
+        line-height: 1.25;
 }
 .header__description--para{
     text-align:center;
@@ -242,7 +251,7 @@ h1{
     flex-direction: row;
 }
 
-.input__container {
+.header__email {
     width: 100%;
     max-width: 360px;
     max-height: 64px;
@@ -292,6 +301,9 @@ button {
     border: none;
    
 }
+.customer__logo{
+    max-width: 560px;
+}
 
 .header__customer--title{
     text-align: center;
@@ -303,7 +315,15 @@ button {
   width:100%;
   max-width:560px;
   height:auto;
-  margin:0 auto
+  margin:0 auto;
+    display: block;
+
+}
+
+.header__img--wrapper{
+    display: flex;
+    justify-content: flex-end;
+
 }
 
 
