--- a/style.css
+++ b/style.css
@@ -47,11 +47,12 @@ link:hover{
 }
 
 
+
 .nav__row{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding:24px;
+    padding:32px 0 0 0;
     width:100%;
     max-width: 1200px;
     margin:0 auto;
@@ -202,25 +203,14 @@ link:hover{
 
 
 .container{
-    padding: 96px 0;
+    padding: 96px 16px 96px 16px;
 
 }
 
-.row{
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    color: #243e63;
-    flex-direction: column;
-    align-items: center;
-}
-.row{
+header.row{
     display: flex;
     justify-content: space-between;
-  
 }
-
-
 
 
 .header__description{
@@ -229,15 +219,11 @@ link:hover{
     flex-direction: column;
     align-items: center;
     width:100%;
-    max-width: 760px;
+    max-width: 560px;
     padding:8px;   
 
 }
-.header__description{
-    width: 100%;
-    max-width: 560px;
-    margin:0 auto;
-}
+
 
 h1{
         color: #1a202c;
