--- a/style.css
+++ b/style.css
@@ -203,11 +203,18 @@ link:hover{
 
 
 .container{
-    padding: 96px 16px 96px 16px;
+    padding: 96px 32px 96px 32px;
 
 }
+.row{
+    width:100%;
+    max-width:1200px;
+    margin:0 auto;
+    color: #243e63;
 
-header.row{
+
+}
+header .row{
     display: flex;
     justify-content: space-between;
 }
@@ -218,9 +225,8 @@ header.row{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width:100%;
-    max-width: 560px;
-    padding:8px;   
+    width:50%;
+    max-width: 560px;  
 
 }
 
@@ -288,27 +294,24 @@ button {
    
 }
 .customer__logo{
-    max-width: 560px;
+    max-width: 90%;
+    height: auto;
 }
 
 .header__customer--title{
     text-align: center;
-    font-size: 12px;
+    font-size: 16px;
     margin:16px
 }
 
 .header__img{
   width:100%;
-  max-width:560px;
-  height:auto;
+  max-width:760px;
+  height: 368px;;
   margin:0 auto;
-    display: block;
-
-}
-
-.header__img--wrapper{
-    display: flex;
-    justify-content: flex-end;
+  display: block;
+  z-index: 1;
+  padding:8px;
 
 }
 
@@ -399,24 +402,30 @@ features*/
 section Quality
 */
 
+#quality .container{
+    padding: 96px 32px;
+    background-color: #f5f5f5;
+}
+
 
 #quality .row{
     display: flex;
     justify-content:space-between; 
     align-items: center;
 }
-.row{
+
+#quality .row{
     width:100%;
     max-width:1200px;
     margin:0 auto;
-    color: #243e63;
-    flex-direction: column;
-    align-items: center;
+    color: #f5f5f5;;
+  
+
 }
 .quality__description{
-    margin-right: 0px;
+    margin-right: 0;
     padding-right: 48px;
-    max-width: 576px;
+  
     
 }
 .quality__img--wrapper{
@@ -427,7 +436,7 @@ section Quality
     z-index: 2;
     display: flex;
     width:50%;
-    max-width:576px;
+    max-width:560px;
 
 }
 .section__tag{
@@ -453,11 +462,15 @@ section Quality
     color: #7c8ba1;
     line-height:1.625;
     margin:0;
+
 }
 
 #quality  .email__btn{
      margin-top: 16px;
 }
+#quality .btn{
+    margin-top: 32px;
+} 
 
 .btn{
     line-height: 1.5;
@@ -475,7 +488,136 @@ section Quality
 .quality__img{
     z-index:1;
     width:100%;
+    height:50vh;
+    width:40vw;
+  
 }
+
+
+.quality__grid {
+    transform: translateX(50%) translateY(50%) scaleX(1) scaleY(1);
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    fill: rgb(100, 21, 255);
+    --tw-text-opacity: 1;
+    color: rgba(100, 21, 255, var(--tw-text-opacity));
+    z-index: 0;
+    display: block;
+}
+
+.quality__img--wrapper {
+    border-radius: 4px;
+    border: 1px solid rgb (229, 231, 235);
+    position: relative;
+    margin: 0 56px;
+    z-index: 2;
+    display: flex;
+    max-width: 560px;
+}
+
+.steps__container{
+    padding: 96px 32px;
+    background-color: #f5f5f5;
+}
+#steps .row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.row{
+    padding:96 32px;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    color: #243e63
+}
+.steps__img--wrapper{
+    width:50%;
+}
+.steps__img--wrapper{
+    display: flex;
+    position:relative;
+}
+.steps__img{
+    z-index: 2;
+    
+}
+img{
+    width:100%;
+}
+.step__number{
+    font-size: 36px;
+}
+
+.steps__description{
+    padding-left: 64px;
+    width:50%;
+    
+
+}
+
+.section__tag{
+    font-size: 16px;
+    color: #6415ff;
+    letter-spacing: 1.6px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.step__description{
+    display: flex;
+    flex-direction: column;
+    margin-left: 24px;
+    max-width: 320px;
+}
+.step__title{
+    font-weight: 600;
+    font-size: 20px;
+    color: #243e63;
+    line-height: 1;
+
+}
+.step{
+    align-items: flex-start;
+    margin-top: 32px;
+}
+
+
+.step__para{
+    font-size: 14px;
+    color: #718096;
+    margin-top: 12px;
+    font-weight: 500;
+    line-height: 2;
+}
+
+
+
+
+    @media (max-width: 1200px) {
+    .steps__grid {
+        height: 5rem;
+        width: 5rem;
+        bottom: -50px;
+    }
+}
+
+.steps__grid {
+    position: absolute;
+    bottom: -100px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 10rem;
+    height: 10rem;
+    opacity: 0.8;
+    z-index: -10;
+    color: rgb(100, 21, 255);
+    fill: currentColor;
+}
+
 
 
 /* small phones, Tablets, Large Smart Phones */
@@ -515,3 +657,7 @@ section Quality
      margin:0 auto;
     }
 }
+
+
+
+
