--- a/style.css
+++ b/style.css
@@ -224,9 +224,6 @@ header .row{
     text-align:center;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width:40%;
-    max-width: 560px;  
 
 }
 
@@ -234,6 +231,7 @@ header .row{
 h1{
         color: #1a202c;
         line-height: 1.25;
+        font:30px;
 }
 .header__description--para{
     text-align:center;
@@ -242,57 +240,55 @@ h1{
     align-items: center;
     flex-direction: row;
 }
-
-.header__email {
-    width: 100%;
-    max-width: 360px;
-    max-height: 64px;
-    border-radius: 500px;
-    border: 2px solid rgb(229, 231, 235);
-    padding: 20px 192px 20px 20px;
-    color: rgb(36, 62, 99);
-    font-size: 16px;
-    font-weight: 500;
-    z-index: 1;
+.header__email{
+    width:100%;
+    max-width:448px;
+    height:68px;
     position:relative;
-    overflow:hidden;
+    display: flex;
+    justify-content: flex-end;
     align-items: center;
-    margin:16px;
 }
 
 
-.email__input{
-    border:none;
-    margin-bottom:24px;
     
-    
+.email__input {
+    width: 100%;
+    border-radius: 500px;
+    border: 2px solid rgb(229, 231, 235);
+    padding: 20px 192px 20px 32px;
+    color: rgb(36, 62, 99);
+    font-size: 16px;
+    font-weight: 500;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+    transition: border-color 300ms;
 }
 .email__btn:hover {
  background-color: rgba(60, 13, 153);
 }
 
-
-.email__btn{
+.email__btn {
     z-index: 2;
-    margin: -55px;
+    margin: 8px;
     height: calc(100% - 16px);
     border-radius: 500px;
-    width: 105px;
+    width: 160px;
     border: none;
     background-color: #6415ff;
     color: #fff;
     font-weight: 700;
     font-size: 16px;
-    position:absolute;
-    margin-left: 120px;
     transition: all 300ms ease;
 }
 
 button {
     cursor: pointer;
     border: none;
-   
 }
+
 .customer__logo{
     max-width: 90%;
     height: auto;
@@ -304,15 +300,10 @@ button {
     margin:16px
 }
 
-.header__img{
-  width:100%;
-  max-width:760px;
-  height: 368px;;
-  margin:0 auto;
-  display: block;
-  z-index: 1;
-  padding:8px;
-
+.header__description, .header__img--wrapper{
+    width:100%;
+    max-width:512px;
+    align-items: center;
 }
 
 
@@ -572,22 +563,23 @@ img{width:100%;}
     font-size:16px;
     color:#6415ff;
     letter-spacing: 1.6px;
+    font-weight: 700;
 }
 .section__title{
     font-size:36px;
     font-weight:900;
     color:rgb(36, 62, 99);
     line-height: 1.5;
-    margin:16px;
+    margin:16px 0;
 }
 .step{
     display: flex;
     align-items:flex-start;
     margin-top:32px;
 }
-.step-number{
+.step__number{
     color:#cbd5e0;
-    font-size:36;
+    font-size:36px;
     font-weight:600;
     line-height:1;
 }
@@ -599,17 +591,149 @@ img{width:100%;}
 }
 .step__title{
     font-weight: 600;
-    font-size: 20ps;
+    font-size: 20px;
     color: #243e63;
     line-height:1;
 }
 .step__para{
-    font-size: 16px;
+    font-size: 14px;
     color:#718096;
     margin-top:12px;
     font-weight: 500;
     line-height:2;
 }
+
+.container__values{
+    padding:96px 32px;
+}
+.values__row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.values__row{
+    width:100%;
+    max-width:1200px;
+    margin:0 auto;
+}
+.values__description, .values__img{
+    width:80%;
+    padding: 32px 16px 32pc, 0;
+}
+.section__tag{
+    font-size:16px;
+    color: #6415ff;
+    letter-spacing:1.6px;
+    font-weight:700;
+    text-transform: uppercase;
+    margin-bottom:px;
+}
+
+#value .section__title{
+    margin-top:16px;
+    margin-bottom:32px;
+
+}
+#quality .section__title,
+#value .section__title{
+    line-height:1.25;
+    font-size:36px;
+    font-weight: 900;
+    color:rgb(36, 62, 99);
+    margin:16px 0;
+    letter-spacing: 0.025em;
+
+}
+    
+
+
+.section__para{
+    font-size:16px;
+    font-weight:500;
+    color:#7c8ba1;
+    line-height:1.625;
+    max-width:50%;
+    text-align: center;
+}
+.values__list{
+    width:1200px;
+    max-width:315px;
+
+}
+.value:nth-of-type(1){
+    margin-top:32px;
+    margin-right:32px;
+}
+.value__title{
+    display: flex;
+    flex-direction: column;
+}
+.value:nth-child(1) .value__img--wrapper{
+    background-color: #9ae6b4;
+}
+.value__img--wrapper{
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 36px;
+    height:36px;
+    margin-bottom:-30px;
+
+}
+.value__img{
+    width:20px;
+    height:20px;
+    
+}
+.value__name{
+    margin-left:56px;
+    font-size:20px;
+    font-weight:bold;
+    color:#243e63
+}
+
+.value__para{
+    margin-top:16px;
+    line-height:1.625;
+    color:#718096
+}
+
+.value:nth-of-type(2) {
+    margin-top:32px;
+}
+.value{
+    margin-right: 2rem;
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    
+}
+.value:nth-child(2) .value__img--wrapper{
+    background-color: #feb2b2;
+}
+
+#values .btn{
+    margin-top: 48px;
+}
+.btn{
+    background-color: #6415ff;
+    padding: 12px 32px;
+    border:none;
+    border-radius: 500px;
+    font-size: 14px;
+    color:#fff;
+    font-weight: bold;
+    transition: all 300ms ease;
+    cursor:pointer;
+}
+.values__img{
+    background-color: #f5f5f5;
+    color: #243E63;
+
+}
+
+
 
 
 
