--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@
     scroll-behavior: smooth;
 }
 
-
+body{background: red;
+}
 
 body{
     max-width:100vw;
     overflow-x: hidden;
-}
+ }
   
 
 .btn, button{
