--- a/style.css
+++ b/style.css
@@ -406,8 +406,10 @@ section{
     text-align: center;
 
 }
-
-
+.section__para{
+    text-align: center;
+    max-width: 576px;
+}
 
 
 .section__para {
@@ -415,6 +417,7 @@ section{
     font-weight: 500;
     color: #7c8ba1;
     line-height: 1.625;
+    margin: 0 auto;
 }
 
 
@@ -465,19 +468,18 @@ section{
 .container {
     padding: 96px 0;
 }
-
+@media(max-width:768px){
+    #quality .row{
+        flex-wrap: wrap;
+    }
+}
 #quality .row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+display: flex;
+justify-content: space-between;
+align-items: center;
 }
 
 
-.quality__description,
-.quality__img--wrapper {
-    width: 50%;
-
-}
 .row{
     width: 100%;
     max-width: 1200px;
@@ -489,7 +491,7 @@ section{
     width: 100%;
 }
 .quality__description {
-    max-width: 550px;
+    max-width: 350px;
     margin-right: 64px;
 }
 
@@ -554,7 +556,7 @@ section{
 
 .quality__description,
 .quality__img--wrapper {
-    width: 50%;
+    width: 100%;
 }
 
 .quality__img {
@@ -593,6 +595,11 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+@media(max-width:768px){
+    #steps .row{
+        flex-wrap: wrap;
+    }
 }
 
 .row {
@@ -714,6 +721,7 @@ img {
     flex-direction: column-reverse
 }
 
+
 #values .row {
     display: flex;
     justify-content: space-between;
@@ -725,7 +733,11 @@ img {
     max-width: 1200px;
     margin: 0 auto;
 }
-
+@media(max-width:768px){
+     .row{
+        flex-wrap: wrap;
+    }
+}
 .values__description {
     width: 50%;
     max-width: 448px;
@@ -768,8 +780,11 @@ img {
     font-weight: 500;
     color: #7c8ba1;
     line-height: 1.625;
+}@media(max-width: 768px){
+    .values__list{
+        flex-wrap: wrap;
+    }
 }
-
 .values__list {
     margin-left: 0px;
     margin-right: 0px;
@@ -823,7 +838,7 @@ img {
 .value__para {
     margin-top: 16px;
     line-height: 1.625;
-    color: 718096;
+    color: #7c8ba1;
 }
 
 .value__img {
@@ -847,7 +862,11 @@ img {
     transition: all 300ms ease;
     cursor: pointer;
 }
-
+@media(max-width:768px){
+    .values__img{
+        flex-wrap:wrap-reverse;
+    }
+}
 .values__img {
     width: 50%;
     max-width: 448px;
